--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-4">
                 <div class="status withdraw">
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$ <span id="currentWithdraw">000</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -103,6 +103,11 @@
             // const withdrawAmount = document.getElementById("withdrawAmount").value;
             // const withdrawNumber = parseFloat(withdrawAmount);
             const withdrawNumber = getInputNumber("withdrawAmount");
+
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1 * withdrawNumber);
+
+            document.getElementById("withdrawAmount").value = "";
             
         })
 
