--- a/index.html
+++ b/index.html
@@ -90,11 +90,26 @@
             // const totalBalance = depositNumber + currentBalanceNumber;
             // document.getElementById("currentBalance").innerText = totalBalance;
 
-            updateSpanText("currentDeposit", depositNumber)
+            if(depositNumber < 0 ){
+                alert("DepositNumber cannot be negetive")
+            }
+            else{
+                
+                updateSpanText("currentDeposit", depositNumber)
 
-            updateSpanText("currentBalance", depositNumber)
+                updateSpanText("currentBalance", depositNumber)
 
-            document.getElementById('depositAmount').value = ""; //amount jog korle khali hoi jabe
+                document.getElementById('depositAmount').value = ""; //amount jog korle khali hoi jabe
+            }
+            
+            // ********if else consition use korar age cilo********?
+
+
+            // updateSpanText("currentDeposit", depositNumber)
+
+            // updateSpanText("currentBalance", depositNumber)
+
+            // document.getElementById('depositAmount').value = ""; //amount jog korle khali hoi jabe
 
         });
         // withdraw button event handler
